# TM4C129EXL_ThreadX

./: .clang-format  .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  ProjectSettings.cmake  README.md
.git.bkp/: COMMIT_EDITMSG  config  index
.git.bkp/logs/: HEAD
.git.bkp/logs/refs/heads/: main
.git.bkp/modules/threadx/: FETCH_HEAD  config  index  packed-refs
.git.bkp/modules/threadx/logs/: HEAD
.git.bkp/modules/threadx/logs/refs/remotes/origin/: HEAD
.git.bkp/modules/threadx/objects/pack/: pack-9e10c93c12c20badd467543c13786efa5bcc7a04.idx
.git.bkp/modules/threadx/refs/heads/: master
.git.bkp/refs/heads/: main
include/: setup.h  stdafx.h  tx_user.h
linkerscripts/: linker.ld
memory/: project0.ld
registers/: tm4c129encpdt.svd
source/: main.c  setup.c  setup.cpp  setup.h  startup_gcc.c  tx_initialize_low_level.S
src/: main.c  startup_gcc.c
